--- a/views/index.hbs
+++ b/views/index.hbs
@@ -46,11 +46,13 @@
     </section>
 
 
-    <div class="heading__title__move" id="packages"></div>
+
+
+    <div class="heading__title__move"></div>
     <section class="section-packages">
         <div class="center-text margin-bottom-big">
             <div class="heading__title__move"></div>
-            <h2 class="heading-secondary"><span class="packages__grey">Discover our packages</span></h2>
+            <h2 class="heading-secondary"><span class="packages__grey" id="packages">Discover our packages</span></h2>
         </div>
 
         <div class="row">
@@ -61,19 +63,15 @@
                         <p class="starter-text">
                             <ul>
                                 <br>
-                                <span class="end">Front-End</span>
-                                <li class="bullet__hidden">Html for beginner &#10003;</li>
-                                <li class="bullet__hidden">Css for beginner &#10003;</li>
-                                <li class="bullet__hidden">Javascript for beginner &#10003;</li>
+                                <li class="bullet__hidden">Html: HTML5 tags, attributes, semantic markup...
+                                </li>
+                                <br>
+                                <li class="bullet__hidden">Css: styles, selectors, declarations...</li>
+                                <br>
+                                <li class="bullet__hidden">Javascript: Data types, object, classes, loop, arrow
+                                    functions...</li>
                             </ul>
                             <br>
-
-                            <ul>
-                                <span class="end">Back-End</span>
-                                <li class="bullet__hidden">Mongo DB for beginner &#10003;</li>
-                                <li class="bullet__hidden">Node/Express for beginner &#10003;</li>
-                                <li class="bullet__hidden">Ruby for beginner &#10003;</li>
-                            </ul>
 
                         </p>
                     </div>
@@ -87,16 +85,21 @@
 
                             <ul>
                                 <br>
-                                <span class="end">Front-End</span>
-                                <li class="bullet__hidden">Intermediate Html &#10003;</li>
-                                <li class="bullet__hidden">Intermediate Css &#10003;</li>
-                                <li class="bullet__hidden">Intermediate Javascript &#10003;</li>
+                                {{!-- <span class="end">Front-End</span> --}}
+                                <li class="bullet__hidden">MongoDB: yntax to create, read, update and delete
+                                    documents/data...</li>
+                                <li class="bullet__hidden">Node: path, url, fs, events, create HTTP server...</li>
+                                <li class="bullet__hidden">Express framework</li>
+                                <li class="bullet__hidden">Passport: authentication app with login, register and access
+                                    control...</li>
+
                             </ul>
                             <br>
 
                             <ul>
                                 <span class="end">Back-End</span>
-                                <li class="bullet__hidden">Intermediate Mongo DB &#10003;</li>
+                                <li class="bullet__hidden">Mongo DB: syntax to create, read, update and delete
+                                    documents/data</li>
                                 <li class="bullet__hidden">Intermediate Node/Express &#10003;</li>
                                 <li class="bullet__hidden">Intermediate Ruby&#10003;</li>
                             </ul>
@@ -111,19 +114,22 @@
                         <p class="starter-text">
                             <ul>
                                 <br>
-                                <span class="end">Front-End</span>
-                                <li class="bullet__hidden">Advance Html &#10003;</li>
-                                <li class="bullet__hidden">Advance Css &#10003;</li>
-                                <li class="bullet__hidden">Advance Javascript &#10003;</li>
+                                <ul>
+                                    <br>
+                                    {{!-- <span class="end">Front-End</span> --}}
+                                    <li class="bullet__hidden">MongoDB: create, read, update and delete
+                                        data...
+                                    </li>
+                                    <li class="bullet__hidden">Node: path, url, fs, events, create HTTP server...</li>
+
+                                    <li class="bullet__hidden">Passport: authentication, register and
+                                        access control...</li>
+                                    <li class="bullet__hidden">React: components, state, props, JSX, events... </li>
+
+
+                                </ul>
                             </ul>
                             <br>
-
-                            <ul>
-                                <span class="end">Back-End</span>
-                                <li class="bullet__hidden">Advance Mongo DB &#10003;</li>
-                                <li class="bullet__hidden">Advance Node/Express &#10003;</li>
-                                <li class="bullet__hidden">Advance Ruby &#10003;</li>
-                            </ul>
                         </p>
 
                     </div>
