--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -12,8 +12,8 @@
             <li class="navigation__item"><a href="/" class="navigation__link"> Home</a></li>
             <li class="navigation__item"><a href="/my-course" class="navigation__link"> My course</a>
             </li>
-            {{!-- <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
-            </li> --}}
+            <li class="navigation__item"><a href="/my-videos" class="navigation__link"> My videos</a>
+            </li>
 
             {{#if isAdmin}}
             <li class="navigation__item"><a href="/manage-all" class="navigation__link"> Manage
