--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -22,6 +22,22 @@
 
 
 {{!-- {{/if}} --}}
+<h4>Make your choices</h4>
+<label for="level">Choose your level</label>
+<select name="level" id="level-select" value="{{this.level}}">
+  <option value="" selected disabled hidden>Level</option>
+  <option value="Beginner">Beginner</option>
+  <option value="Intermediate">Intermediate</option>
+  <option value="Master">Master</option>
+</select>
+
+<label for="cursus">Choose your course</label>
+<select name="cursus" id="cursus-select">
+  <option value="" selected disabled hidden>Course</option>
+  <option value="" disabled>Select your level first</option>
+
+</select>
+<button id="follow-course-btn">Follow this course</button>
 
 {{#if message }}
 <div class="error-message w50">{{message}}</div>
@@ -29,18 +45,7 @@
 <h1>{{user.username}}</h1>
 <p class="userDescription">Profile description.</p>
 
-{{#if notViewedVideos}}
-<h4>Next videos</h4>
-{{!-- Initial width : 640 ; height : 385 --}}
-<div id="not-viewed-div">
-  {{#each notViewedVideos}}
-  <iframe class="youtube-player" type="text/html" width="332" height="200 " src="{{this.url}}"></iframe>
-  <label for="add-viewed">Add to viewed list</label>
-  <button class="add-viewed-btn" id="{{this._id}}">Add</button>
-  {{!-- <input type="checkbox" name="add-viewed" id="{{this._id}}"> --}}
-  {{/each}}
-</div>
-{{/if}}
+
 
 {{#if viewedVideos}}
 <h4>Viewed videos</h4>
