--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,13 @@
 <header class="header">
     <div class="logo-box">
 
-        <i class="fab fa-earlybirds" style="font-size:48px;color:#4c4c4c;"></i>
+        <i class="fab fa-earlybirds" style="font-size:60px;color:#4c4c4c;"></i>
     </div>
 
     <div class="text-box">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Become</span>
-            <span class="heading-primary-sub">a code master with juloup app</span>
+            <span class="heading-primary-sub">a code master with Hizzy/Learn</span>
         </h1>
 
         <a href="#packages" class="btn btn-white btn-animated">Discover our packages</a>
@@ -26,7 +26,7 @@
                     <h3 class="heading-tertiary margin-bottom-small">
                         You're going to love our app
                     </h3>
-                    <p class="paragraph">With juloup app, you have access to the largest collection of code learning
+                    <p class="paragraph">With Hizzy/Learn, you have access to the largest collection of code learning
                         videos from beginner to advance.<br>
                         A playlist containing videos is entirely created for you by our team according to your
                         level.<br>
@@ -35,7 +35,9 @@
                     <h3 class="heading-tertiary margin-bottom-small">
                         Learn to code like you never did before
                     </h3>
-                    <p class="paragraph"> </p>
+                    <p class="paragraph">With Hizzy/Learn you can select your level in your profile and change it at
+                        anytime. You also have access to a "my video" section where you can find all your videos and
+                        where you can keep track of your progression.</p>
 
                     {{!-- <a href="#" class="btn-text">Learn more &rarr;</a> --}}
                     <div class="clearfix"></div>
@@ -78,7 +80,7 @@
                 </div>
             </div>
             <div class="col-1-of-3">
-                <div class="card">
+                <div class="card im">
                     <div class="card__side margin__left">
                         <h3 class="heading__packages__style">Intermediate</h3>
                         <p class="starter-text">
@@ -86,29 +88,18 @@
                             <ul>
                                 <br>
                                 {{!-- <span class="end">Front-End</span> --}}
-                                <li class="bullet__hidden">MongoDB: yntax to create, read, update and delete
-                                    documents/data...</li>
-                                <li class="bullet__hidden">Node: path, url, fs, events, create HTTP server...</li>
-                                <li class="bullet__hidden">Express framework</li>
-                                <li class="bullet__hidden">Passport: authentication app with login, register and access
-                                    control...</li>
+                                <li class="bullet__hidden">CSS: flexbox and grid</li>
+                                <li class="bullet__hidden java">Javascript: DOM, promises, async...</li>
+                                <li class="bullet__hidden git">Git and Github: add, commit, status, push...</li>
 
                             </ul>
                             <br>
-
-                            <ul>
-                                <span class="end">Back-End</span>
-                                <li class="bullet__hidden">Mongo DB: syntax to create, read, update and delete
-                                    documents/data</li>
-                                <li class="bullet__hidden">Intermediate Node/Express &#10003;</li>
-                                <li class="bullet__hidden">Intermediate Ruby&#10003;</li>
-                            </ul>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-1-of-3">
-                <div class="card">
+                <div class="card im">
                     <div class="card__side margin__left">
                         <h3 class="heading__packages__style">Master</h3>
                         <p class="starter-text">
@@ -117,12 +108,13 @@
                                 <ul>
                                     <br>
                                     {{!-- <span class="end">Front-End</span> --}}
-                                    <li class="bullet__hidden">MongoDB: create, read, update and delete
+                                    <li class="bullet__hidden mongo">MongoDB: create, read, update and delete
                                         data...
                                     </li>
-                                    <li class="bullet__hidden">Node: path, url, fs, events, create HTTP server...</li>
+                                    <li class="bullet__hidden node">Node: path, url, fs, events, create HTTP server...
+                                    </li>
 
-                                    <li class="bullet__hidden">Passport: authentication, register and
+                                    <li class="bullet__hidden pass">Passport: authentication, register and
                                         access control...</li>
                                     <li class="bullet__hidden">React: components, state, props, JSX, events... </li>
 
