--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,28 +2,30 @@
     <div class="footer container">
         <section class="col col-3">
             <br>
-            <h5>Contact Information</h5>
-            <address class="adress">Ironhack<br />226 Boulevard Voltaire,<br />75011 Paris,<br />France<br />
-            </address>
-            <h5>Follow Us</h5>
-            <ul>
-                <li class="icon__bullet__free">
-                    <a href="https://twitter.com/ironhackpar?lang=fr" target="_blank">
-                        <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png"
-                            alt="Twitter Logo" class="twitter-icon"></a>
-                </li>
-                <li class="icon__bullet__free">
-                    <a href="https://www.instagram.com/ironhackpar/?hl=fr" target="_blank">
-                        <img src="https://instagram-brand.com/wp-content/themes/ig-branding/assets/images/ig-logo-email.png"
-                            alt="Instagram Logo" class="instagram-icon"></a>
-                </li>
-                <div class="facebook__move row">
+            <div class="margin-footer">
+                <h5>Contact Information</h5>
+                <address class="adress">Ironhack<br />226 Boulevard Voltaire,<br />75011 Paris,<br />France<br />
+                </address>
+                <h5>Follow Us</h5>
+                <ul>
                     <li class="icon__bullet__free">
-                        <a href="https://fr-fr.facebook.com/IronhackPAR/" target="_blank">
-                            <img src="http://www.iconarchive.com/download/i54037/danleech/simple/facebook.ico"
-                                alt="Facebook Logo" class="facebook-icon"></a>
+                        <a href="https://twitter.com/ironhackpar?lang=fr" target="_blank">
+                            <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png"
+                                alt="Twitter Logo" class="twitter-icon"></a>
                     </li>
-                </div>
+                    <li class="icon__bullet__free">
+                        <a href="https://www.instagram.com/ironhackpar/?hl=fr" target="_blank">
+                            <img src="https://instagram-brand.com/wp-content/themes/ig-branding/assets/images/ig-logo-email.png"
+                                alt="Instagram Logo" class="instagram-icon"></a>
+                    </li>
+                    <div class="facebook__move row">
+                        <li class="icon__bullet__free">
+                            <a href="https://fr-fr.facebook.com/IronhackPAR/" target="_blank">
+                                <img src="http://www.iconarchive.com/download/i54037/danleech/simple/facebook.ico"
+                                    alt="Facebook Logo" class="facebook-icon"></a>
+                        </li>
+                    </div>
+            </div>
             </ul>
         </section>
         <iframe
