--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,210 +1,3 @@
-/*body,
-html {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-input,
-button,
-input:focus,
-button:focus :focus {
-  outline: none !important;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.container {
-  width: 80%;
-  height: 100%;
-  margin: 0 auto;
-  margin-top: -4em;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.container h1 {
-  font-weight: bold;
-  font-size: calc(1.8vh + 1.8vw + 1.8em);
-}
-
-.container h2 {
-  text-align: center;
-  text-decoration: underline;
-  font-weight: bold;
-  margin-bottom: 1em;
-}
-
-.container .profileImg {
-  width: 50%;
-  margin-bottom: 1em;
-}
-
-.container form {
-  width: 25em;
-  position: relative;
-}
-
-.container form label {
-  color: #666;
-  display: inline-block;
-  margin-bottom: 10px;
-  text-align: center;
-  font-weight: bold;
-  width: 100%;
-  margin-top: 1em;
-}
-
-.container form label:first-child {
-  margin-top: 0;
-}
-
-.container form input,
-.container form button {
-  box-sizing: border-box;
-  font-size: 14px;
-  outline: none !important;
-  padding: 0.5em 1em;
-  margin-bottom: 1em;
-  width: 100%;
-  border: 2px solid #eee;
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
-  border-radius: 2em;
-}
-
-.container form input {
-  background: transparent;
-}
-
-.container form input:focus {
-  border-color: 0 !important;
-  box-shadow: 0 !important;
-}
-
-.container form button {
-  border-radius: 2em;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 8px 16px;
-  margin-top: 1.5em;
-  margin-bottom: 0.7em;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: 0.3s ease background;
-  width: 100%;
-}
-
-.container form button:hover {
-  transition: 0.3s ease background;
-}
-
-.container form#photoForm {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  width: 40em;
-}
-
-.container form .photoBox {
-  text-align: left;
-  margin-right: 1em;
-  display: inline-block;
-  width: 20em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  position: relative;
-  box-sizing: border-box;
-  font-size: 14px;
-  padding: 0.5em 1em;
-  margin-bottom: 1em;
-  border: 2px solid #eee;
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
-  border-radius: 2em;
-  color: grey;
-  cursor: pointer;
-}
-
-.container form input.photoInput {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.container form input.photoInput input {
-  cursor: pointer;
-}
-
-.container form button.saveBut {
-  display: inline-block;
-  margin-top: 0;
-  width: 8em;
-}
-
-.container form button.signupBut,
-.container form button.saveBut {
-  background: #43a3e6;
-  border: 2px solid #43a3e6;
-}
-
-.container form button.signupBut:hover,
-.container form button.saveBut:hover {
-  background: #fff;
-  color: #43a3e6;
-}
-
-.container form button.loginBut {
-  background: #00a388;
-  border: 2px solid #00a388;
-}
-
-.container form button.loginBut:hover {
-  background: #fff;
-  color: #00a388;
-}
-
-.container .account-message {
-  font-size: 0.7em;
-  text-align: center;
-}
-
-
-
-
-
-.userDescription {
-  width: 50%;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  -webkit-text-fill-color: black;
-  -webkit-box-shadow: 0 0 0px 1000px white inset;
-  transition: background-color 5000s ease-in-out 0s;
-}
- */
-
 * {
   margin: 0;
   padding: 0;
@@ -360,12 +153,6 @@ span {
   font-weight: 900;
 }
 
-.profileImg {
-  width: 250px;
-  border-radius: 130px;
-  margin-top: 80px;
-}
-
 /*LOGIN & SIGNUP CSS */
 
 .wrap__login,
@@ -509,7 +296,8 @@ hr {
   display: block;
   font-size: 20px;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  margin-top: 10px;
+  letter-spacing: 2.4px;
 
   animation: moveInRight 1s ease-out;
 }
@@ -752,9 +540,15 @@ hr {
   transform: rotateY(180deg);
 }
 
+.im {
+  margin-left: 60px;
+}
+
+/*
 .margin__left {
   margin-right: 50px;
 }
+*/
 
 .heading__packages__style {
   font-family: "Lato", sans-serif;
@@ -776,6 +570,23 @@ ul {
 .bullet__hidden {
   list-style-type: none;
 }
+
+.java {
+  margin-top: 60px;
+}
+
+.git {
+  margin-top: 35px;
+}
+
+.mongo {
+  margin-top: -27px;
+}
+
+.node {
+  margin-top: 34px;
+}
+
 .end {
   color: #4c4e4f;
   font-weight: 900;
@@ -793,7 +604,7 @@ ul {
 h5 {
   color: #a89565;
   font-family: "Lato", sans-serif;
-  font-size: 30px;
+  font-size: 33px;
   font-weight: 900;
   text-transform: uppercase;
   display: inline-block;
@@ -802,22 +613,26 @@ h5 {
 .dark-background {
   background-color: #4c4c4c;
   color: white;
+  width: 1366px;
+  margin-left: -128px;
+  height: 554px;
 }
 
 .adress {
   color: #e0d6c0;
   font-family: "Lato", sans-serif;
-  font-size: 20px;
+  font-size: 23px;
   font-style: italic;
   font-weight: 900;
 }
 
 .map-frame {
-  height: 375px;
+  height: 553px;
   float: right;
   width: 60%;
-  margin-top: -367px;
-  margin-right: -15px;
+
+  margin-right: -127px;
+  margin-top: -488px;
 }
 
 .twitter-icon {
@@ -899,6 +714,9 @@ footer a {
   margin-bottom: -772px;
 }
 
+.margin-footer {
+  margin-top: 60px;
+}
 /*MANAGE ALL CSS */
 
 .manage-courses-title,
@@ -906,7 +724,7 @@ footer a {
   color: #a89565;
 
   font-size: 60px;
-  font-weight: 200;
+  font-weight: 900;
   margin-left: 350px;
   margin-top: 100px;
 }
@@ -1001,10 +819,47 @@ footer {
 /* ICON STYLE CSS */
 
 .fab.fa-earlybirds {
-  background-image: linear-gradient(
-      to right bottom,
-      rgb(117, 83, 15),
-      rgba(189, 180, 163, 15)
-    ),
-    url("../images/main.png");
+  background: transparent;
+}
+
+/* PROFILE LAYOUT CSS */
+
+.profile-background {
+  width: 1404px;
+  background: #bdb4a3;
+  margin-left: -167px;
+}
+.container__profile {
+  margin-top: -100px;
+}
+
+#photoForm {
+  margin-top: -75px;
+}
+
+.photoInput {
+  margin-left: 1270px;
+}
+
+.saveBut {
+  margin-left: 1265px;
+  height: 25px;
+  width: 144px;
+}
+
+/*PROFILE CSS PART 2 */
+.username_style {
+  text-transform: capitalize;
+  margin-left: 647px;
+  margin-top: 40px;
+  font-size: 40px;
+  font-weight: 900;
+  color: #4c4c4c;
+}
+
+.profileImg {
+  width: 250px;
+  border-radius: 130px;
+  margin-top: 100px;
+  margin-left: 602px;
 }
