--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -140,7 +140,7 @@ span {
   font-family: "Lato", sans-serif;
   color: #a39365;
   font-weight: 900;
-  border-bottom: 6px dotted #4c4e4f;
+
   width: fit-content;
   margin-left: 200px;
   margin-top: 100px;
@@ -838,20 +838,23 @@ footer {
 }
 
 .photoInput {
-  margin-left: 1270px;
+  margin-left: 38px;
+  border-radius: 107px;
+  font-family: "Lato", sans-serif;
+  color: #4c4c4c;
 }
 
 .saveBut {
-  margin-left: 1265px;
   height: 25px;
   width: 144px;
+  margin-left: -185px;
 }
 
 /*PROFILE CSS PART 2 */
 .username_style {
   text-transform: capitalize;
   margin-left: 647px;
-  margin-top: 40px;
+  margin-top: 60px;
   font-size: 40px;
   font-weight: 900;
   color: #4c4c4c;
@@ -862,4 +865,38 @@ footer {
   border-radius: 130px;
   margin-top: 100px;
   margin-left: 602px;
+}
+
+.descri {
+  font-family: "Lato", sans-serif;
+  color: #a39365;
+  font-weight: 900;
+}
+
+.descr {
+  font-size: 20px;
+  font-family: "Lato", sans-serif;
+  color: #4c4c4c;
+  font-weight: 600;
+  text-align: center;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(117, 83, 15, 0.3),
+    rgba(189, 180, 163, 0.3)
+  );
+
+  border-radius: 20px;
+  width: 470px;
+  height: 300px;
+  margin-left: 450px;
+  margin-top: -125px;
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 75%,
+    75% 75%,
+    75% 100%,
+    50% 75%,
+    0% 75%
+  );
 }
