--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -38,6 +38,7 @@
 
 </select>
 <button id="follow-course-btn">Follow this course</button>
+<div id="msg-box"></div>
 
 {{#if message }}
 <div class="error-message w50">{{message}}</div>
