--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -853,7 +853,7 @@ footer {
 /*PROFILE CSS PART 2 */
 .username_style {
   text-transform: capitalize;
-  margin-left: 647px;
+  margin-left: 640px;
   margin-top: 60px;
   font-size: 40px;
   font-weight: 900;
@@ -888,7 +888,7 @@ footer {
   border-radius: 20px;
   width: 470px;
   height: 300px;
-  margin-left: 450px;
+  margin-left: 420px;
   margin-top: -125px;
   clip-path: polygon(
     0% 0%,
@@ -899,4 +899,104 @@ footer {
     50% 75%,
     0% 75%
   );
+}
+
+.choice_profile {
+  margin-left: 30px;
+}
+
+h4 {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  color: #4c4c4c;
+  font-size: 35px;
+  margin-left: -24px;
+  text-align: center;
+  margin-top: 55px;
+}
+
+.choices {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  color: #a89565;
+  font-weight: 900;
+  margin-left: 30px;
+}
+
+.choices-course {
+  margin-left: 945px;
+}
+
+#follow-course-btn {
+  width: 130px;
+  margin-left: 947px;
+}
+
+#level-select,
+#course-select {
+  color: #4c4c4c;
+  font-size: 15px;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(117, 83, 15, 0.3),
+    rgba(189, 180, 163, 0.3)
+  );
+  border-radius: 30px;
+
+  height: 33px;
+}
+
+#msg-box {
+  margin-left: 983px;
+  margin-top: 20px;
+  background-color: #4c4c4c;
+  color: #fff;
+  width: 119px;
+  font-weight: 900;
+  font-size: 16px;
+}
+
+/* VIDEO STYLE CSS */
+
+.current_course {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(117, 83, 15, 0.3),
+    rgba(82, 57, 12, 0.3)
+  );
+  width: 1366px;
+  margin-left: -128px;
+  text-align: center;
+  height: 68px;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-family: "Lato", sans-serif;
+  font-size: 33px;
+  color: #e0d6c0;
+}
+
+.youtube-player {
+  margin-left: 311px;
+  margin-top: 111px;
+}
+
+#not-viewed-div {
+  width: 1366px;
+
+  margin-left: -129px;
+  height: 900px;
+  margin-top: -105px;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(117, 83, 15, 0.5),
+    rgba(189, 180, 163, 0.5)
+  );
+}
+
+.added {
+  font-size: 20px;
+  margin-left: 41px;
+  color: #a89565;
+  font-weight: 900;
+  font-family: "Lato", sans-serif;
 }
