--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <div class="text-box">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Become</span>
-            <span class="heading-primary-sub">a code master with Hizzy/Learn</span>
+            <span class="heading-primary-sub">a master with Hizzy/Learn</span>
         </h1>
 
         <a href="#packages" class="btn btn-white btn-animated">Discover our packages</a>
