--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <div class="text-box">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Become</span>
-            <span class="heading-primary-sub">a master with Hizzy/Learn</span>
+            <span class="heading-primary-sub">a master with Hizzy.Learn</span>
         </h1>
 
         <a href="#packages" class="btn btn-white btn-animated">Discover our packages</a>
@@ -26,7 +26,7 @@
                     <h3 class="heading-tertiary margin-bottom-small">
                         You're going to love our app
                     </h3>
-                    <p class="paragraph">With Hizzy/Learn, you have access to the largest collection of code learning
+                    <p class="paragraph">With Hizzy.Learn, you have access to the largest collection of code learning
                         videos from beginner to advance.<br>
                         A playlist containing videos is entirely created for you by our team according to your
                         level.<br>
@@ -35,7 +35,7 @@
                     <h3 class="heading-tertiary margin-bottom-small">
                         Learn to code like you never did before
                     </h3>
-                    <p class="paragraph">With Hizzy/Learn you can select your level in your profile and change it at
+                    <p class="paragraph">With Hizzy.Learn you can select your level in your profile and change it at
                         anytime. You also have access to a "my video" section where you can find all your videos and
                         where you can keep track of your progression.</p>
 
