--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -57,7 +57,7 @@
 
 <div class="descr">
   <h1 class="descri">Hey, {{user.username}}!</h1>
-  <p class="userDescription">We are really excited you are part of <br> the Hizzy/Learn community. <br>
+  <p class="userDescription">We are really excited you are part of <br> the Hizzy.Learn community. <br>
     <div id="profile-course-text">
       You have
       {{#unless user.course}}
